# axum-protobuf

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  protojson.rs
tests/: app.rs  protobuf.rs  protojson.rs
