[package]
name = "axum-protobuf"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false }
futures-util = { version = "0.3", default-features = false }
prost = { version = "0.14", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "axum/json"
]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["macros"] }
prost = { version = "0.14", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "macros"] }
tower = "0.5.2"
