[package]
name = "axum-protobuf"
version = "0.1.0"
edition = "2024"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
description = "A crate bringing protocol buffers to axum via prost."
repository = "https://github.com/dsferruzza/axum-protobuf"
readme = "README.md"
documentation = "https://docs.rs/axum-protobuf"
categories = ["web-programming::http-server", "encoding"]
keywords = ["axum", "extractor", "response", "protobuf", "json"]
license = "MIT"

[dependencies]
axum = { version = "0.8", default-features = false }
futures-util = { version = "0.3", default-features = false }
prost = { version = "0.14", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "axum/json"
]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["macros"] }
prost = { version = "0.14", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.47", default-features = false, features = ["rt", "macros"] }
tower = { version = "0.5", default-features = false }
